@@ -5,7 +5,6 @@ import com.sapegin.dependencies.annotation.Inject;
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
-import java.util.stream.Collectors;
 
 public class BeanFactory {
 
@@ -13,7 +12,7 @@ public class BeanFactory {
     private final Configuration configuration;
 
     private BeanFactory() {
-        this.configuration = new ConsoleConfiguration();
+        this.configuration = new DefaultConfiguration();
     }
 
     public static BeanFactory getInstance() {
@@ -21,16 +20,10 @@ public class BeanFactory {
     }
 
     public <T> T getBean(Class<T> clazz) throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException {
-//        Class<? extends T> implementationClass = clazz;
-        Class<? extends T> implementationClass = configuration.getImplementationOfInterface(clazz);
-//        if (clazz.isInterface()) {
-//            System.out.println("Interface: " + implementationClass);
-//            implementationClass = configuration.getImplementationOfInterface(implementationClass);
-//        }
-        System.out.println(implementationClass);
+        Class<? extends T> implementationClass = configuration.getImplementationOf(clazz);
         T bean = implementationClass.getDeclaredConstructor().newInstance();
 
-        for (Field field : Arrays.stream(clazz.getDeclaredFields()).filter(field -> field.isAnnotationPresent(Inject.class)).collect(Collectors.toList())) {
+        for (Field field : Arrays.stream(clazz.getDeclaredFields()).filter(field -> field.isAnnotationPresent(Inject.class)).toList()) {
             field.setAccessible(true);
             field.set(bean, BEAN_FACTORY.getBean(field.getType()));
         }
